--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -526,3 +526,67 @@ a strong {
     padding: 20px;
   }
 }
+
+.avatar-container {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  margin: 20px;
+  font-family: 'Courier New', monospace;
+}
+
+.avatar-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+  border-radius: 50%; /* Hace la imagen redonda */
+}
+
+.code-element {
+  position: absolute;
+  color: var(--accent-color);
+  font-size: 24px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+}
+
+.top-left {
+  top: -15px;
+  left: -15px;
+}
+
+.top-right {
+  top: -15px;
+  right: -15px;
+}
+
+.bottom-left {
+  bottom: -15px;
+  left: -15px;
+}
+
+.bottom-right {
+  bottom: -15px;
+  right: -15px;
+}
+
+.avatar-container:hover .avatar-image {
+  transform: scale(1.05);
+}
+
+.avatar-container:hover .top-left {
+  transform: translate(-5px, -5px);
+}
+
+.avatar-container:hover .top-right {
+  transform: translate(5px, -5px);
+}
+
+.avatar-container:hover .bottom-left {
+  transform: translate(-5px, 5px);
+}
+
+.avatar-container:hover .bottom-right {
+  transform: translate(5px, 5px);
+}
